--- a/.github/actions/send-email/action.yml
+++ b/.github/actions/send-email/action.yml
@@ -120,14 +120,14 @@ runs:
 
           **Supported Issue Commands:**
 
-          _The commands described below may be added as issue comments. Only one command
+          _The commands listed below may be added as comments to issue [${{ github.repository }}#${{ inputs.instance_issue_number }}](https://github.com/${{ github.repository }}/issues/${{ inputs.instance_issue_number }}). Only one command
           may be entered per comment._
 
-          - `/shelve`: Shelve the instance
-          - `/unshelve`: Unshelve the instance
+          - `/shelve`: Shelve **${{ inputs.instance_name }}**
+          - `/unshelve`: Unshelve **${{ inputs.instance_name }}**
           - `/encode_email`: Update issue description obfuscating email
           - `/decode_email`: Update issue description deobfuscating email
-          - `/email`: Send email to _Issue creator_ with connection URL
+          - `/email`: Send this email with connection URL
 
     - name: Set error message
       id: set_error_message
