feat: Add support for synchronous update of instance status issue label

--- a/.github/workflows/control-instance-from-workflow.yml
+++ b/.github/workflows/control-instance-from-workflow.yml
@@ -48,6 +48,7 @@ jobs:
         uses: ./.github/actions/control-instance
         with:
           os_cloud: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
+          repository: ${{ github.repository }}
           issue_number: ${{ inputs.issue_number }}
           command_name: ${{ inputs.command_name }}
           instance_name_prefix: ${{ vars.INSTANCE_NAME_PREFIX }}
