--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -6,6 +6,9 @@ inputs:
       "Name of the OpenStack cloud allocation to select openstack auth settings
       defined in '.config/openstack/clouds.yaml'"
     required: true
+  repository:
+    description: "The full name of the repository in which the issue exists"
+    required: true
   issue_number:
     description: "Issue number"
     required: true
@@ -236,3 +239,12 @@ runs:
           `${{ inputs.command_name }}` command successfully applied to **${{ steps.define.outputs.instance_name }}** instance.
 
           See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+    - name: Update Request Status Label
+      uses: ./.github/actions/update-request-status-label
+      with:
+        os_cloud: ${{ inputs.os_cloud }}
+        token: ${{ inputs.token }}
+        repository: ${{ inputs.repository }}
+        issue_number: ${{ inputs.issue_number }}
+        instance_name: ${{ steps.define.outputs.instance_name }}
