fix(action/update-request-status-label): Explicitly set "deleted" state after instance removal
Due to the delay in OpenStack reflecting the deletion of a server,
querying the server list immediately after deletion may still return
the instance. To avoid this, the instance state is now explicitly set
to "DELETED" if the openstack server delete command succeeds, ensuring
accurate status updates.

--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -244,3 +244,5 @@ runs:
         token: ${{ inputs.token }}
         issue_number: ${{ inputs.issue_number }}
         instance_name: ${{ steps.define.outputs.instance_name }}
+        instance_status:
+          ${{ inputs.command_name == 'delete' && 'DELETED' || '' }}
