--- a/.github/actions/update-request-status-label/action.yml
+++ b/.github/actions/update-request-status-label/action.yml
@@ -17,11 +17,16 @@ inputs:
     description:
       "The name of the instance for which the status is being updated."
     required: true
+  instance_status:
+    description: |
+      "Optionally specify the instance status directly instead of retrieving it from
+      OpenStack. If provided, the action will use this status without querying."
 runs:
   using: "composite"
   steps:
     - name: Retrieve instance status
       id: retrieve_instance_status
+      if: ${{ inputs.instance_status != '' }}
       shell: bash
       run: |
         source ~/venv/bin/activate
@@ -38,10 +43,8 @@ runs:
             openstack server show $INSTANCE_NAME -c status -f json | \
             jq -r .status
           )
-        elif [[ $server_count == 0 ]]; then
-          instance_status="DELETED"
         else
-          echo "::error ::Unexpected number of server '$server_count'. Expected count is 0 or 1."
+          echo "::error ::Unexpected number of server '$server_count'. Expected count is 1."
           exit 1
         fi
         echo "instance_status [$instance_status]"
@@ -72,4 +75,5 @@ runs:
         GH_REPO: ${{ github.repository }}
         ISSUE_NUMBER: ${{ inputs.issue_number }}
         INSTANCE_STATUS:
-          ${{ steps.retrieve_instance_status.outputs.instance_status }}
+          ${{ inputs.instance_status != '' && inputs.instance_status ||
+          steps.retrieve_instance_status.outputs.instance_status }}
