--- a/.github/actions/update-request-status-label/action.yml
+++ b/.github/actions/update-request-status-label/action.yml
@@ -26,7 +26,7 @@ runs:
   steps:
     - name: Retrieve instance status
       id: retrieve_instance_status
-      if: ${{ inputs.instance_status != '' }}
+      if: ${{ inputs.instance_status == '' }}
       shell: bash
       run: |
         source ~/venv/bin/activate
