fix(actions/control-instance): Remove hard-coded instance name for task state check
Eliminate the hard-coded instance name introduced in
commit e2bbe0c ("feat(control-instance): Check task state before running
command", 2024-08-14), ensuring proper task state validation before executing
commands.

--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -89,7 +89,7 @@ runs:
       run: |
         source ~/venv/bin/activate
 
-        task_state=$(openstack server show instance-30 -f json | \
+        task_state=$(openstack server show $INSTANCE_NAME -f json | \
           jq -r '.["OS-EXT-STS:task_state"]')
 
         echo "task_state [$task_state]"
