--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -16,7 +16,7 @@ jobs:
       ${{ !github.event.issue.pull_request && (
       contains(github.event.comment.body, '/unshelve') ||
       contains(github.event.comment.body, '/shelve') ||
-      contains(github.event.comment.body, '/delete') ) }}
+      contains(github.event.comment.body, '/delete_instance') ) }}
     steps:
       - name: unshelve command
         id: unshelve_command
@@ -46,7 +46,7 @@ jobs:
         id: delete_command
         uses: github/command@v1.2.0
         with:
-          command: "/delete"
+          command: "/delete_instance"
           reaction: "rocket"
           allowed_contexts: "issue"
           permissions: "write,maintain,admin"
