feat(validate-request): Automatically encode emails if valid and matching

--- a/.github/workflows/validate-request.yml
+++ b/.github/workflows/validate-request.yml
@@ -155,6 +155,32 @@ jobs:
           EMAIL: ${{ steps.decode_email.outputs.output_string }}
           CONFIRM_EMAIL: ${{ steps.decode_confirm_email.outputs.output_string }}
 
+      - uses: actions/create-github-app-token@31c86eb3b33c9b601a1f60f98dcbfd1d70f379b4 # v1.10.3
+        id: app-token
+        with:
+          app-id: ${{ vars.MORPHOCLOUD_WORKFLOW_APP_ID }}
+          private-key: ${{ secrets.MORPHOCLOUD_WORKFLOW_APP_PRIVATE_KEY }}
+
+      - name: Encode emails
+        id: encode_emails
+        if:
+          ${{ success() && steps.check_email_encryption.outputs.encoded ==
+          'false' && steps.check_email_format.outputs.valid == 'true' &&
+          steps.check_confirm_email_format.outputs.valid == 'true' &&
+          steps.check_emails_match.outputs.valid == 'true' }}
+        run: |
+          gh workflow run update-issue-from-workflow.yml \
+            -f issue_number=$ISSUE_NUMBER \
+            -f command_name=$COMMAND_NAME
+          gh issue comment $ISSUE_NUMBER \
+            -b "Workflow **update-issue-from-workflow.yml** triggered by **validate-request.yml** for command <tt>$COMMAND_NAME</tt><br> \
+            <br> \
+            For details, see https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}_"
+        env:
+          ISSUE_NUMBER: ${{ steps.collect_inputs.outputs.issue_number }}
+          COMMAND_NAME: encode_email
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
       - name: command results comment (failure)
         if: ${{ failure() }}
         uses: peter-evans/create-or-update-comment@v4.0.0
@@ -188,5 +214,8 @@ jobs:
             > If the ORCID iD format is incorrect, edit the issue description to correct it.
             >
             > If either email format is invalid or the emails do not match, please update the issue description accordingly.
+
+            > [!TIP]
+            > Once the emails are correctly formatted and match, they will be automatically obfuscated for security.
 
             See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
