fix: Simplify action log links in informational messages
To declutter issue comments, this commits updates how links to action logs
are presented in informational messages:

* When a workflow is triggered, the link to the action log is shortened
  and displayed as "here".

* When a workflow reports a successful command execution, the link to the
  action log is removed.

--- a/.github/workflows/automatic-instance-shelving.yml
+++ b/.github/workflows/automatic-instance-shelving.yml
@@ -121,9 +121,8 @@ jobs:
                   -f issue_number=$issue_number \
                   -f command_name=shelve
                 gh issue comment $issue_number \
-                  -b "Workflow **control-instance-from-workflow.yml** triggered by **automatic-instance-shelving.yml** for command <tt>shelve</tt><br> \
-                  <br> \
-                  For details, see https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}_"
+                  -b "Workflow **control-instance-from-workflow.yml** triggered by **automatic-instance-shelving.yml** for command <tt>shelve</tt>. \
+                  See details [here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})."
               fi
             done
         env:
