fix(create-instance): Improve readability of control instance success message

--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -233,7 +233,7 @@ runs:
         body: |
           ### Command Results ✅
 
-          `${{ inputs.command_name }}` command successfully applied to **${{ steps.define.outputs.instance_name }}** instance.
+          Instance **${{ steps.define.outputs.instance_name }}** successfully ${{ inputs.command_name }}d.
 
     - name: Update Request Status Label
       uses: ./.github/actions/update-request-status-label
