fix(create-instance): Fix step checking if reboot was successful

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -573,17 +573,15 @@ jobs:
           INSTANCE_IP: ${{ steps.ip_create.outputs.floating_ip_address }}
           INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
 
-      - name: comment (failed to install Slicer extension dependencies)
-        if:
-          ${{ steps.slicer_install_extension_dependencies.outcome == 'failure'
-          && failure() }}
+      - name: comment (failed to reboot instance)
+        if: ${{ steps.reboot_instance.outcome == 'failure' && failure() }}
         uses: peter-evans/create-or-update-comment@v4.0.0
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
             ### Instance Creation Results ❌
 
-            Failed to install Slicer extension dependencies on instance **${{ steps.define.outputs.instance_name }}**.
+            Failed to reboot instance **${{ steps.define.outputs.instance_name }}**.
 
             See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
